--- a/codesquare/src/main/resources/templates/board/freeView.html
+++ b/codesquare/src/main/resources/templates/board/freeView.html
@@ -5,6 +5,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 layout:decorator="layout/mainLayout">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <title>Insert title here</title>
 <style>
 	#a{
@@ -34,14 +35,33 @@ layout:decorator="layout/mainLayout">
 
 <span th:text="${list.writeDateBoard}"></span>
 
-<div style="margin-top: 25px; border-bottom: 1px solid gray;"></div>
-<div style="margin-top: 40px; border-bottom: 1px solid gray;"> <span th:utext=${list.content}></span>
+<div style="margin-top: 25px; border-bottom: 1px solid #BAB9BA;"></div>
+<div style="margin-top: 40px; margin-bottom:150px; border-bottom: 1px solid #BAB9BA;"> <span th:utext=${list.content}></span>
 </div>
 				<div align="right" style="margin-top: 20px;">
-				<a th:href="@{'/freemodifygo?id=' + ${list.id}}" type="button" id=a>수정</a> &nbsp;
-				<a href="javascript:history.go(-1)" type="button" id=a>목록보기</a> &nbsp;
-				<a th:href="@{'freedelete?id='+${list.id}}" type="button" id=a>삭제</a>
+				<a th:href="@{'/freemodifygo?id=' + ${list.id}}" type="button" id=a style="font-weight: bold;">수정</a> &nbsp;
+				<a href="javascript:history.go(-1)" type="button" id=a style="font-weight: bold;">목록보기</a> &nbsp;
+				<a th:href="@{'freedelete?id='+${list.id}}" type="button" id=a style="font-weight: bold;">삭제</a>
 				</div>
+				
+				<div class="container">
+        <label for="content" style="font-size: 30px; color: #8045dd">댓글</label>
+        <form name="commentInsertForm">
+            <div class="input-group">
+               <input type="hidden" id="bno" name="bno" th:value="${list.id}"/>
+               <input type="text" class="form-control" id="content" name="content" placeholder="내용을 입력하세요."  style="height: 100px; background-color: #FBFAFB">
+               <span class="input-group-btn">
+                    <button type="button" name="commentInsertBtn" id="a" style="height: 100px;">등록</button>
+               </span>
+              </div>
+        </form>
+    </div>
+   
+    
+	<script src="static/js/comment/comment.js"></script>
+    <div class="container">
+        <div class="commentList"></div>
+    </div>
 </div>
 </body>
 </html>
