--- a/codesquare/src/main/resources/templates/fragments/header2.html
+++ b/codesquare/src/main/resources/templates/fragments/header2.html
@@ -39,7 +39,7 @@
 
 	<div class="row logo">
 		<div class="col codesquare py-0">
-			<a th:href="@{/new}"><img th:src="@{/static/images/logo.png}"
+			<a th:href="@{/}"><img th:src="@{/static/images/logo.png}"
 				alt="noimg" /> 코드스퀘어</a>
 		</div>
 	</div>
