--- a/codesquare/src/main/resources/templates/board/freeModify.html
+++ b/codesquare/src/main/resources/templates/board/freeModify.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.typeleaf.org" 
 xmlns:sd="http://www.thymeleaf.org/spring-data"
 xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-layout:decorator="layout/mainLayout">
+layout:decorator="layout/mainLayout2">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <style>
