--- a/codesquare/src/main/resources/templates/board/freeView.html
+++ b/codesquare/src/main/resources/templates/board/freeView.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.typeleaf.org" 
 xmlns:sd="http://www.thymeleaf.org/spring-data"
 xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-layout:decorator="layout/mainLayout">
+layout:decorator="layout/mainLayout2">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -49,7 +49,7 @@ layout:decorator="layout/mainLayout">
         <form name="commentInsertForm">
             <div class="input-group">
                <input type="hidden" id="bno" name="bno" th:value="${list.id}"/>
-               <input type="text" class="form-control" id="content" name="content" placeholder="내용을 입력하세요."  style="height: 100px; background-color: #FBFAFB">
+               <input type="text" class="form-control" id="content" name="content" placeholder="내용을 입력하세요."  style="height: 100px; background-color: #FBFAFB" autocomplete="off">
                <span class="input-group-btn">
                     <button type="button" name="commentInsertBtn" id="a" style="height: 100px;">등록</button>
                </span>
