--- a/codesquare/src/main/resources/templates/board/noticeBoard.html
+++ b/codesquare/src/main/resources/templates/board/noticeBoard.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.typeleaf.org"
 xmlns:sd="http://www.thymeleaf.org/spring-data"
 xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-layout:decorator="layout/mainLayout">
+layout:decorator="layout/mainLayout2">
 <meta charset="utf-8">
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
