--- a/codesquare/src/main/resources/templates/fragments/header2.html
+++ b/codesquare/src/main/resources/templates/fragments/header2.html
@@ -50,7 +50,7 @@
 		<div class="col ">
 			<span class="dropmenu"><a href="#"> 새소식</a> </span>
 			<ul class="dropdown">
-				<li><a href="#">공지사항</a></li>
+				<li><a href="/home">공지사항</a></li>
 				<li><a href="#">IT NEWS</a></li>
 			</ul>
 		</div>
@@ -61,9 +61,9 @@
 			</span>
 			<ul class="dropdown">
 				<li><a href="#">스터디 모집</a></li>
-				<li><a href="#">세미나 모집</a></li>
+				<li><a href="/seminarList">세미나 모집</a></li>
 				<li><a href="#">스터디 / 세미나 후기</a></li>
-				<li><a href="#">공간예약</a></li>
+				<li><a href="/companyList">공간예약</a></li>
 			</ul>
 		</div>
 
@@ -71,7 +71,7 @@
 			<span class="dropmenu"> <a href="#">커뮤니티</a>
 			</span>
 			<ul class="dropdown">
-				<li><a href="#">자유게시판</a></li>
+				<li><a href="/getfree">자유게시판</a></li>
 				<li><a href="#">질문있어요</a></li>
 			</ul>
 		</div>
