--- a/codesquare/src/main/resources/templates/room/companyList.html
+++ b/codesquare/src/main/resources/templates/room/companyList.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.typeleaf.org"
 xmlns:sd="http://www.thymeleaf.org/spring-data"
 xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-layout:decorator="layout/mainLayout">
+layout:decorator="layout/mainLayout2">
 <meta charset="utf-8">
 <head>
 <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
