--- a/codesquare/src/main/resources/templates/room/companyList.html
+++ b/codesquare/src/main/resources/templates/room/companyList.html
@@ -6,10 +6,8 @@ layout:decorator="layout/mainLayout">
 <meta charset="utf-8">
 <head>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<link href="static/styles/room/datepicker.min.css" rel="stylesheet" type="text/css">
-<script src="static/js/room/datepicker.min.js"></script>
-<script src="static/js/room/i18n/datepicker.en.js"></script>
+
+
   <style type="text/css">
   input {
   border: 1px solid #542672;
@@ -22,25 +20,6 @@ layout:decorator="layout/mainLayout">
 }
 </style>
 
-  <script>
-  $(function() {
-	    $( "#testDatepicker" ).datepicker({
-	    	language: 'en',
-	    	dateFormat: 'yyyy-mm-dd',
-	        minDate: new Date()
-	    });
-	});
-  $(document).ready(function () {
-      // 콤보박스가 변경될 때 
-      $('#lstFavorites').change(function () {
-          // 드롭다운리스트에서 선택된 값을 텍스트박스에 출력
-          var selectedText = // $("#lstFavorites option:selected").text();
-              // $("option:selected").text();
-              $(":selected").text();  // 드롭다운리스트가 하나밖에 없다면 이렇게 써도 됨
-          $('#txtFavorite').val(selectedText);
-      });
-  });
-  </script>
 </head>
 <body>
 <div class="container" layout:fragment="content">
@@ -90,5 +69,34 @@ layout:decorator="layout/mainLayout">
 		</div>
 
 </div>
+<!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+
+<th:block layout:fragment="script">
+  <script>
+  $(function() {
+	    $( "#testDatepicker" ).datepicker({
+	    	language: 'en',
+	    	dateFormat: 'yyyy-mm-dd',
+	        minDate: new Date()
+	    });
+	});
+  $(document).ready(function () {
+      // 콤보박스가 변경될 때 
+      $('#lstFavorites').change(function () {
+          // 드롭다운리스트에서 선택된 값을 텍스트박스에 출력
+          var selectedText = // $("#lstFavorites option:selected").text();
+              // $("option:selected").text();
+              $(":selected").text();  // 드롭다운리스트가 하나밖에 없다면 이렇게 써도 됨
+          $('#txtFavorite').val(selectedText);
+      });
+  });
+  </script>
+	<link href="static/styles/room/datepicker.min.css" rel="stylesheet" type="text/css">
+	<script src="static/js/room/datepicker.min.js"></script>
+	<script src="static/js/room/i18n/datepicker.en.js"></script>
+	
+</th:block>
+
+
 </body>
 </html>
