--- a/codesquare/src/main/resources/templates/layout/mainLayout.html
+++ b/codesquare/src/main/resources/templates/layout/mainLayout.html
@@ -32,10 +32,7 @@
 <div layout:fragment="content" style="margin-bottom: 100px;"></div>
 
 <!-- 페이지의 푸터부분 -->
-<footer th:replace="fragments/footer :: footerFragment"></footer>
-<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 <footer th:replace="fragments/footer :: footerFragment"></footer> 
-
 <script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 <script th:src="@{/webjars/popper.js/1.14.6/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/4.2.1/js/bootstrap.js}"></script>
@@ -56,8 +53,8 @@
 <script th:src="@{/static/js/notice/notice.js}"></script>
 
 <script th:src="@{/static/js/securityAjax.js}"></script>
+<th:block layout:fragment="css"></th:block>
 <th:block layout:fragment="script"></th:block>
-
 
 </body>
 </html>
