--- a/codesquare/src/main/resources/templates/study/studyWanted.html
+++ b/codesquare/src/main/resources/templates/study/studyWanted.html
@@ -38,7 +38,7 @@
     		<h1>스터디모집 글쓰기 게시판</h1>
  <!-- ####################    글쓰기 테스트를 위한 임시 버튼      ##################### -->
 					<a th:href="@{/studyWanted/writeView}">글쓰기 TEST </a>
-		
+					<a th:href="@{/studyWanted/createGroup}">그룹 개설하기 </a>
 		
 		
 			<!-- 게시판 리스트 -->
