--- a/codesquare/src/main/resources/templates/study/studyWantedWriteView.html
+++ b/codesquare/src/main/resources/templates/study/studyWantedWriteView.html
@@ -43,34 +43,49 @@
 					<div id="group-select" class="row">
 						<!-- #####       왼쪽 영역               ##### -->
 						<div id="card-groups" class="col-md-4">
-							<div class="card" id="card_main">
+							<div class="card shadow" id="card_main">
 								<div class="has-group" th:if="${#lists.size(group)} eq 0">
 									<i class="fa fa-exclamation"></i>
 									<div class="info-message">내가 리더인 그룹이 없습니다</div>
 								</div>
 								<div class="has-group" th:unless="${#lists.size(group)} eq 0">
 									<i class="fas fa-user-friends"></i>
-									<div class="info-message">모집할 그룹을 선택해 주세요</div>
+									<div>
+										<span id="info-message" tabindex="-1">모집할 그룹을 선택해 주세요</span>
+									</div>
 								</div>
 								<div id="group-creat-button" class="btn-div-main shadow">그룹 개설하기</div>
-								<div id="group-skip-button" class="btn-div-sub shadow">그룹 없이 모집하기</div>
+								<div id="group-skip-button" class="btn-div-sub shadow-sm">그룹 없이 모집하기</div>
 							</div>
-							<div class="card" id="card_none">
+							<div class="card shadow" id="card_none">
 							    <i class="return-button fas fa-reply"></i>
-							    <img class="card-img-top rounded-circle" th:src="@{/static/codesquareDB/default/default_user_Image4.jpg}"
+							    <img class="card-img-top rounded-circle shadow" th:src="@{/static/codesquareDB/default/default_user_image4.jpg}"
 							        alt="image">
 							    <div class="card-body">
-							        <h4 class="card-title">그룹없음</h4>
+							        <h3 class="card-title">그룹없음</h3>
 							        <p class="card-text">그룹을 사용하지 않겠습니다</p>
 							    </div>
 							</div>
-							<div class="card" th:id="|card_${group.id}|" th:each=" group : ${group}">
+							<div class="card shadow" th:id="|card_${group.id}|" th:each=" group : ${group}">
 								<i class="return-button fas fa-reply"></i>
-								<img class="card-img-top rounded-circle" th:src="@{/static/codesquareDB/default/default_user_Image4.jpg}" alt="image">
+								<img class="card-img-top rounded-circle shadow" th:src="@{/static/codesquareDB/default/default_user_image4.jpg}" alt="image">
 								<div class="card-body">
-								    <h4 class="card-title" th:text="${group.groupId}">그룹없음</h4>
-								    <p >여기 뭘로하디</p>
-								    <!-- <a id="return-button" class="card-button btn btn-success">선택취소</a> -->
+								    <h3 class="card-title" th:text="${group.groupId}"></h3>
+									<div class="form-row m-btm20">
+										<div class="col">
+											  <label for="recruitmentCount">모집 인원</label>
+										</div>
+										<div class="col-7">
+											 <input type="number" class="form-control" id="recruitmentCount" 
+  											 min="1" max="10" step="1" placeholder="최대 10명까지" required>
+										</div>
+									</div>
+										<p class="m-btm20">신청 시 추가 신청 양식이 있습니까?</p>
+									<div class="btn-group" role="group" >
+										<button id="form_used" type="button" class="btn btn-secondary">네,있어요</button>
+										<button id="form_none" type="button" class="btn btn-secondary">없어요</button>
+									</div>
+																					 
 								</div>
 							</div>
 						</div>
@@ -83,9 +98,9 @@
 									<h5 class="font-weight-lighter">그룹의 다양한 기능을 이용하여 그룹을 더 편하게 관리해 보세요</h5>
 								</div>
 								<div class="group-list media" th:each="group : ${group}">
-									<img class="avatar rounded-circle shadow" th:src="@{/static/codesquareDB/default/default_user_Image4.jpg}" alt="Avatar">
+									<img class="avatar rounded-circle shadow" th:src="@{/static/codesquareDB/default/default_user_image4.jpg}" alt="Avatar">
 									<div th:id="|list_${group.id}|" class="media-body">
-										<h5 th:text="${group.groupId}"></h5>
+										<h5 class="groupId" th:text="${group.groupId}"></h5>
 										<div class="group-details font-weight-lighter">
 											<span th:text="${group.levelId}"></span>
 											<span th:text="${group.tagId}"></span>
@@ -101,9 +116,9 @@
 									<h5 class="font-weight-lighter">그룹의 다양한 기능을 이용하여 그룹을 더 편하게 관리해 보세요</h5>
 								</div>
 							</div>
-							<div th:id="|info_${group.id}|" class="info-list groupContent row" th:each="group : ${group}">
-								<div class="content-label col-md-3">그룹 상세 정보</div>
-								<dl class="group-detail group-detail-Grid col-md-9 row">
+							<div th:id="|info_${group.id}|" class="info-list groupContent" th:each="group : ${group}">
+								<p class="large m-btm20">그룹 상세 정보</p>
+								<dl class="group-detail group-detail-Grid">
 									<dt>그룹명:</dt>
 									<dd th:text="${group.groupId}"></dd>
 									<dd th:class="group-member-cnt" th:text="|${group.memberCount}명의 멤버가 참여중 입니다|"></dd>
@@ -142,23 +157,32 @@
 					<!-- #####    END   그룹 content의 처음 화면              ##### -->
 				</div>
 				<!-- ##### END group-area ##### -->
+				<!-- ##### START applicationform-area ##### -->
+				<div id="applicationform-area">
+					<h3>신청양식</h3>
+					<div><h5>신청자에게 요청할 신청 양식을 적어주세요 </h5></div>
+					<p class="font-weight-light"> : 최대 5개의 질문까지 설정 가능하며, 신청메세지는 기본 값입니다.</p>
+					<form id="applicationform" name="applicationform">
+						<input class="applyTag" type="text" name="question" placeholder="예)참여 가능 기간" required/>
+					</form>
 				
+				</div>
 
 				<h3>상세 내용</h3>
 					<form id="smartEditorResgistForm" name="smartEditorResgistForm" action="/studyWanted/write">
 						<input type="hidden" name="boardName" value="스터디모집">
-						<input type="hidden" name="groupId" value="그룹없음"> 
+						<input type="hidden" name="groupId" value=""> 
 						<input type="hidden" name="nickName" th:value="@{${session.nickName}}">
 						<input type="hidden" name="userId" th:value="@{${session.userId}}">
 						<!-- ##### 글 등록 text area 영역 #####-->
-						<input type="text" name="title" id="writeTitle" placeholder="제목을 입력해 주세요" size="30">
+						<input type="text" name="title" id="writeTitle" placeholder="제목을 입력해 주세요" size="30" required/>
 						<textarea name="content" id="writeContent"
 							placeholder="내용을 입력해 주세요."
-							style="width: 100%; height: 112px; min-width: 610px; overflow: visible;" rows="25"></textarea>
+							style="width: 100%; height: 112px; min-width: 610px; overflow: visible;" rows="25" required></textarea>
 					</form>
 					<!-- ##### 취소/등록 버튼 영역 #####-->
-					<button id="stdMo_submit" class="shadow-sm" type="button">등록</button>
-					<button id="stdMo_cancle" class="shadow-sm" type="button">취소</button>
+					<button id="stdMo_submit" class="custom-btn shadow-sm" type="button">등록</button>
+					<button id="stdMo_cancle" class="custom-btn shadow-sm" type="button">취소</button>
 				</div>
 			</div> 
 			<!-- END write-container -->
